fixed gradient on firefox

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -177,7 +177,7 @@ div#map{
 }
 
 #map #bottom-gradient{
-    background: -webkit-linear-gradient(
+    background: linear-gradient(
         rgba(255, 255, 255, 0) 0%,
         rgba(255, 255, 255, 1) 100%
     ); 
